[package]
name = "midetor"
version = "1.0.17"
edition = "2021"
license-file="LICENSE"
keywords = ["editor", "markdown"]
categories = ["text-editors"]
description = "midetor is a terminal-based vim like Markdown editor. You markdown-scanner installed for it to work"
readme = "README.md"
exclude = ["images/*",]

[dependencies]
crossterm = "0.27.0"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
tui-textarea = "0.7.0"
ratatui = "0.29.0" # Updated to match tui-textarea 0.7.0 dependency
chrono = "0.4"
syntect = "5.3.0"
clap = { version = "4.5", features = ["derive"] }


[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
